# mariadb-trimmean-plugin

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  trimmean.cpp  trimmean.h
tests/: CMakeLists.txt  main.cpp
